0.12.26
- reorganized test directory to facilitate new tests
- add css `all` to supported attributes. (Introduced in 2013, supported mostly everywhere, REC since 2021.)
- add workaround for bad checksums in a small number of PNG files
- don't delete links to external resources when the fragment is not a valid xml identifier

0.12.25 January 1, 2023
- forgot to strip marc subfields in pubinfo

0.12.24 December 26, 2022
- use same method as Autocat3 for rendering PubInfo
- in generated header, render each creator on a separate line
- don't set exclude_encodings param for html5lib parser
- improve info log message for parser selection
- header removal was messed up by language tags in the marker. removed them
- MIN_CHUNK_SIZE reduced from 1024 bytes to 256 bytes. fixes #147
- update to libgutenberg 0.10.13 to include plural creator roles

0.12.23 November 29, 2022
- fix the fix to the whitespace around `<br>` to fix issue with 'None' appearing in EPUBS
- switch to `html5lib` for files likely to be html5 (not xml). This has the effect of closing any tags for empty elements not closed in the source file. Much slower than the C-based parsers used for XHTML, but probably not a big hit because results are cached.

0.12.22 November 28, 2022
- add whitespace to `<br>` elements in headers. tidy used to put whitespace around `<br>` elements. PPs relied on this behavior, so we're stuck.
- add pagebreak css for EPUB2 boilerplate
- changed log level for empty img[alt] from ERROR to WARNING
- fix replacement css for table[align] and img[align]
- fix incorrect css for bgcolor attributes
- fix incorrect css for clear='all'
- changed the approach to replacing `<center>` - there's additional css for tables in a center element.
- the HTML void element `wbr` is not recognized by lxml. for this reason, we had to
    - switch to `html.parser` for files likely to be html5 (not xml)